# linux-discord-rich-presence

./: CHANGELOG.md  Cargo.toml  README.md
doc/: configuration.md  linux-discord-rich-presence-desktop-wrapper  linux-discord-rich-presence-minimized.desktop  linux-discord-rich-presence.desktop  response.schema.json  update.schema.json
doc/configs/: all-in-one.py  all-in-one.sh  hide-presence-when-some-process-is-running.sh  static.json
src/: config.rs  main.rs  process_wrapper.rs  rich_presence_client.rs  rich_presence_config.rs  rich_presence_controller.rs  shell.rs  update_message.rs
