[package]
name = "linux-discord-rich-presence"
description = "Customizable Discord Rich Presence client for Linux"
authors = ["trickybestia <trickybestia@gmail.com>"]
version = "2.0.1"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = 'unwind'

[dependencies]
discord-rich-presence = "0.1"
clap = "=3.0.0-beta.4"
clap_derive = "=3.0.0-beta.4"
log = "0.4"
simplelog = "0.10"
tokio = { version = "1.12", features = ["rt", "macros", "time", "process", "io-util"] }
notify = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
