[package]
name = "linux-discord-rich-presence"
description = "Customizable Discord Rich Presence client for Linux"
authors = ["trickybestia <trickybestia@gmail.com>"]
version = "2.0.1"
edition = "2021"

[profile.release]
strip = true

[dependencies]
discord-rich-presence = "0.1"
clap = { version = "3", features = ["derive"] }
log = "0.4"
simplelog = "0.10"
tokio = { version = "1.12", features = ["rt", "macros", "time", "process", "io-util"] }
notify = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
lazy_static = "1.4"
