[package]
name = "linux-discord-rich-presence"
description = "Customizable Discord Rich Presence client for Linux"
authors = ["trickybestia <trickybestia@gmail.com>"]
version = "3.0.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
discord-rich-presence = "0.2"
clap = { version = "3", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.19", features = ["rt", "macros", "time", "process", "io-util"] }
notify = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
lazy_static = "1.4"
